@@ -10,8 +10,10 @@
  * The selected slide is now always centered in the workspace area.
  * Turned the status bar into a progress bar, plus updated functions to use it.
  * Text layers can now be any of the DejaVu fonts.
+ * Text is displayed in the text layer dialog in the colouring, font face, and font size
+   chosen.
  * Several minor improvements for the time line area.
- * Added a status bar icon.
+ * Added a status bar icon, with a right click menu for various actions.
  * Added a "screenshot delay" preference, in seconds, which can range from 0 to 60.
  * Updated the screen capture to display visual notification messages when screenshots are
    taken.
